--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,49 +3,52 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 216 20% 95.1%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 42.96 74.31% 57.25%;
-    --primary-foreground: 0 0% 0%;
-    --secondary: 240 4.8% 90%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 90%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 240 10% 3.9%;
-    --radius: 0.5rem;
-  }
+  @layer base {
+    :root {
+      --background: 0 0% 100%;
+      --foreground: 0 0% 0%;
+      --card: 0 0% 100%;
+      --card-foreground: 240 6.67% 2.94%;
+      --popover: 0 0% 100%;
+      --popover-foreground: 240 10% 3.92%;
+      --primary: 240 5.88% 10%;
+      --primary-foreground: 0 0% 100%;
+      --secondary: 240 4.76% 95.88%;
+      --secondary-foreground: 240 5.88% 10%;
+      --muted: 240 4.76% 95.88%;
+      --muted-foreground: 240 3.83% 46.08%;
+      --accent: 240 4.76% 95.88%;
+      --accent-foreground: 240 5.88% 10%;
+      --destructive: 0 72% 50.98%;
+      --destructive-foreground: 0 0% 98.04%;
+      --border: 240 5.88% 90%;
+      --input: 268.24 42.5% 84.31%;
+      --ring: 240 5.03% 64.9%;
+      --radius: 0.5rem;
+    }
 
-  .dark {
-    --background: 240 10% 5%;
-    --foreground: 0 0% 98%;
-    --card: 240 10% 10%;
-    --card-foreground: 0 0% 95%;
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 42.96 74.31% 57.25%;
-    --primary-foreground: 0 0% 0%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 40%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 240 4.9% 83.9%;
+    .dark {
+      --background: 240 10% 3.92%;
+      --foreground: 0 0% 98.04%;
+      --card: 240 10% 3.92%;
+      --card-foreground: 0 0% 98.04%;
+      --popover: 240 10% 3.92%;
+      --popover-foreground: 0 0% 98.04%;
+      --primary: 0 0% 98.04%;
+      --primary-foreground: 240 5.88% 10%;
+      --secondary: 240 3.7% 15.88%;
+      --secondary-foreground: 0 0% 98.04%;
+      --muted: 240 3.7% 15.88%;
+      --muted-foreground: 240 5.03% 64.9%;
+      --accent: 240 3.7% 15.88%;
+      --accent-foreground: 0 0% 98.04%;
+      --destructive: 0 62.03% 30.98%;
+      --destructive-foreground: 0 0% 98.04%;
+      --border: 240 3.7% 15.88%;
+      --input: 240 3.7% 15.88%;
+      --ring: 240 4.88% 83.92%;
+      --radius: 0.5rem;
+    }
   }
 }
 
